--- a/web-app/.vscode/launch.json
+++ b/web-app/.vscode/launch.json
@@ -17,6 +17,17 @@
             //"address": "localhost",
             "processId": "${command:PickProcess}",
             "port": 5858
+        },
+        {
+            "name": "Chrome",
+            "type": "chrome",
+            "request": "launch",
+            "url": "http://localhost:3000",
+            "webRoot": "${workspaceRoot}/src",
+            "userDataDir": "${workspaceRoot}/.chrome",
+            "sourceMapPathOverrides": {
+                "webpack:///src/*": "${webRoot}/*"
+            }
         }
     ]
 }
