--- a/web-app/package.json
+++ b/web-app/package.json
@@ -13,11 +13,14 @@
     "trianglify": "^1.0.1"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  }
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
+  },
+  "homepage": "https://lalernehl.github.io/stock-trading-journal"
 }
