--- a/web-app/package.json
+++ b/web-app/package.json
@@ -4,17 +4,18 @@
   "private": true,
   "dependencies": {
     "keymirror": "^0.1.1",
-    "material-ui": "^0.17.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router-dom": "^4.0.0",
-    "react-sticky": "^5.0.5",
+    "material-ui": "^0.17.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.1",
+    "react-sticky": "^5.0.8",
     "react-tap-event-plugin": "^2.0.1",
     "trianglify": "^1.0.1"
   },
   "devDependencies": {
     "gh-pages": "^0.12.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
