More work in manage accounts dialog - Added logic to update account - Added logic switch views (select, update, delete, add) - Starting work on add account

--- a/web-app/package.json
+++ b/web-app/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
     "react-sticky": "^5.0.8",
+    "react-swipeable-views": "^0.12.3",
     "react-tap-event-plugin": "^2.0.1",
     "trianglify": "^1.0.1"
   },
